[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "colorful-logger"
authors = [
    {name = "thep0y", email = "thepoy@163.com"},
]
description = "A colorful logger for python3."
readme = "README.md"
requires-python = ">=3"
license = {file = "LICENSE"}
classifiers = ["Programming Language :: Python :: 3"]
keywords = ["log", "logger", "logging", "colorful"]
dependencies = [
    "colort>=0.7",
    "typing_extensions; python_version<'3.8'",
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/thep0y/python-logger"
repository = "https://github.com/thep0y/python-logger"

[tool.setuptools]
packages = ["colorful_logger"]

[tool.setuptools.package-data]
colorful_logger = ["py.typed"]

# 即使为空也必须有这个 section 才能使用 setuptools_scm
[tool.setuptools_scm]
write_to = "colorful_logger/version.py"

[tool.black]
target-version = ['py38', 'py39', 'py310', 'py311']
line-length = 88

[tool.pyright]
pythonVersion = '3.11'
venv = 'dev'